add docker & tests fix & swagger upgrade & idempotency fix
